[gd_scene load_steps=18 format=2]

[ext_resource path="res://Walka_Normalna.gd" type="Script" id=1]
[ext_resource path="res://Hud/Fire_Landscape.png" type="Texture" id=2]
[ext_resource path="res://Spell/Spell2_press.png" type="Texture" id=3]
[ext_resource path="res://Przeciwnik/SpriteTentacle.png" type="Texture" id=4]
[ext_resource path="res://Spell/Spell4.png" type="Texture" id=5]
[ext_resource path="res://Hud/NewHud.png" type="Texture" id=6]
[ext_resource path="res://Hud/HP_down.png" type="Texture" id=7]
[ext_resource path="res://Spell/Spell2.png" type="Texture" id=8]
[ext_resource path="res://Spell/Spell1.png" type="Texture" id=9]
[ext_resource path="res://Przeciwnik/Gracz.png" type="Texture" id=10]
[ext_resource path="res://Spell/Spell3.png" type="Texture" id=11]
[ext_resource path="res://Spell/Spell4_press.png" type="Texture" id=12]
[ext_resource path="res://Spell/Spell1_press.png" type="Texture" id=13]
[ext_resource path="res://Hud/HP_progres.png" type="Texture" id=14]

[sub_resource type="VisualShader" id=1]
code = "shader_type spatial;
render_mode specular_schlick_ggx;




void vertex() {
// Output:0

}

void fragment() {
// Output:0

}

void light() {
// Output:0

}
"
graph_offset = Vector2( 0, -193 )
nodes/fragment/0/position = Vector2( 440, 180 )

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 63.0006
height = 92.433

[node name="Node2D" type="Node2D"]
material = SubResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Kosmos" type="Sprite" parent="."]
position = Vector2( 245.658, 696.931 )
scale = Vector2( 0.666178, 0.668302 )
texture = ExtResource( 2 )
offset = Vector2( 591.22, -499.347 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Gracz" type="Node2D" parent="."]

[node name="Gracz" type="Sprite" parent="Gracz"]
position = Vector2( 205, 520 )
texture = ExtResource( 10 )
offset = Vector2( -3, -122 )
__meta__ = {
"_edit_lock_": true
}

[node name="Bar_Gracz_Hp" type="TextureProgress" parent="Gracz"]
margin_left = 136.959
margin_top = 263.125
margin_right = 332.959
margin_bottom = 281.125
rect_scale = Vector2( 0.65, 0.65 )
value = 100.0
texture_under = ExtResource( 7 )
texture_progress = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gracz_Hp" type="Label" parent="Gracz/Bar_Gracz_Hp"]
margin_left = -3.0
margin_right = 215.0
margin_bottom = 19.0
rect_scale = Vector2( 0.9, 0.9 )
rect_pivot_offset = Vector2( 26.5, 7.00002 )
text = "100/100"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Macka" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="Macka"]

[node name="Bar_Enemy_Hp" type="TextureProgress" parent="Macka/Area2D"]
margin_left = 990.22
margin_top = 322.786
margin_right = 1186.22
margin_bottom = 340.786
rect_scale = Vector2( 0.65, 0.65 )
max_value = 40.0
value = 40.0
texture_under = ExtResource( 7 )
texture_progress = ExtResource( 14 )
stretch_margin_left = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enemy_Hp" type="Label" parent="Macka/Area2D/Bar_Enemy_Hp"]
margin_right = 196.0
margin_bottom = 18.0
text = "40/40"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pole_macki" type="CollisionShape2D" parent="Macka/Area2D"]
position = Vector2( 1050, 430 )
scale = Vector2( 0.75, 0.75 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Macka/Area2D"]
position = Vector2( 1050, 530 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 4 )
offset = Vector2( 0.0474243, -127.666 )
__meta__ = {
"_edit_lock_": true
}

[node name="Hood" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Hood"]
position = Vector2( 640.369, 366.3 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Boost" type="TextureButton" parent="Hood"]
margin_left = 335.73
margin_top = 836.815
margin_right = 463.73
margin_bottom = 964.815
rect_scale = Vector2( 0.52, 0.52 )
rect_pivot_offset = Vector2( 97.9583, -434.332 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Attack" type="TextureButton" parent="Hood"]
margin_left = 364.449
margin_top = 527.954
margin_right = 492.449
margin_bottom = 655.954
rect_scale = Vector2( 0.52, 0.52 )
rect_pivot_offset = Vector2( 39.4418, 41.7258 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 13 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Stun" type="TextureButton" parent="Hood"]
margin_left = 437.363
margin_top = 525.152
margin_right = 565.363
margin_bottom = 653.152
rect_scale = Vector2( 0.52, 0.52 )
rect_pivot_offset = Vector2( 40.8539, 47.2246 )
texture_normal = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heal" type="TextureButton" parent="Hood"]
margin_left = 435.478
margin_top = 606.862
margin_right = 563.478
margin_bottom = 734.862
rect_scale = Vector2( 0.52, 0.52 )
rect_pivot_offset = Vector2( 44.7173, 43.7913 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="FPS" type="Label" parent="."]
margin_left = 14.2866
margin_top = 549.241
margin_right = 54.2866
margin_bottom = 563.241
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Container" type="Container" parent="."]
margin_left = 1046.63
margin_top = 253.763
margin_right = 1092.63
margin_bottom = 301.763
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_left = -200.0
margin_bottom = 75.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Opis_spella" type="Label" parent="Panel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 190.0
margin_bottom = 65.0
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="."]
margin_left = 1280.0
margin_right = 1480.0
margin_bottom = 75.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Opis_moba" type="Label" parent="Panel2"]
margin_left = 10.0
margin_top = 10.0
margin_right = 190.0
margin_bottom = 65.0
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="H" type="TextureButton" parent="."]
margin_left = 14.0
margin_top = 548.0
margin_right = 98.0
margin_bottom = 581.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="K" type="TextureButton" parent="."]
margin_left = 14.0
margin_top = 583.0
margin_right = 98.0
margin_bottom = 629.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="S" type="TextureButton" parent="."]
margin_left = 14.0
margin_top = 631.141
margin_right = 98.0
margin_bottom = 677.141
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B" type="TextureButton" parent="."]
margin_left = 14.0
margin_top = 679.0
margin_right = 98.0
margin_bottom = 712.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="W" type="TextureButton" parent="."]
margin_left = 272.0
margin_top = 630.0
margin_right = 337.0
margin_bottom = 694.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="Macka/Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Macka/Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="mouse_entered" from="Hood/Boost" to="." method="_on_Boost_mouse_entered"]
[connection signal="mouse_exited" from="Hood/Boost" to="." method="_on_Boost_mouse_exited"]
[connection signal="pressed" from="Hood/Boost" to="." method="_on_Boost_pressed"]
[connection signal="mouse_entered" from="Hood/Attack" to="." method="_on_Attack_mouse_entered"]
[connection signal="mouse_exited" from="Hood/Attack" to="." method="_on_Attack_mouse_exited"]
[connection signal="pressed" from="Hood/Attack" to="." method="_on_Attack_pressed"]
[connection signal="mouse_entered" from="Hood/Stun" to="." method="_on_Stun_mouse_entered"]
[connection signal="mouse_exited" from="Hood/Stun" to="." method="_on_Stun_mouse_exited"]
[connection signal="pressed" from="Hood/Stun" to="." method="_on_Stun_pressed"]
[connection signal="mouse_entered" from="Hood/Heal" to="." method="_on_Heal_mouse_entered"]
[connection signal="mouse_exited" from="Hood/Heal" to="." method="_on_Heal_mouse_exited"]
[connection signal="pressed" from="Hood/Heal" to="." method="_on_Heal_pressed"]
